--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -12,10 +12,9 @@ jobs:
     runs-on: windows-latest
     steps:
     - name: setup-graalvm
-      uses: rtc11/setup-graalvm@master
+      uses: DeLaGuardo/setup-graalvm@3
       with:
-        args: https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.0.0/graalvm-ce-java8-windows-amd64-20.0.0.zip
-
+        graalvm-version: '19.3.0.java8' // GraalVM version, no pattern syntax available atm.
     - name: Checkout code
       uses: actions/checkout@v1
     - name: Test
