ci-linux.yml ci-windows.yml

--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -12,10 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: setup-graalvm
-      uses: rtc11/setup-graalvm@master
+    #   uses: rtc11/setup-graalvm@master
+    #   with:
+    #     args: https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.0.0/graalvm-ce-java8-linux-amd64-20.0.0.tar.gz
+      uses: DeLaGuardo/setup-graalvm@master
       with:
-        args: https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.0.0/graalvm-ce-java8-linux-amd64-20.0.0.tar.gz
-
+        graalvm-version: '20.0.0.java8'
     - name: Checkout code
       uses: actions/checkout@v1
     - name: Test
