--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -11,10 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: setup-graalvm
-    #   uses: rtc11/setup-graalvm@master
-    #   with:
-    #     args: https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.0.0/graalvm-ce-java8-linux-amd64-20.0.0.tar.gz
+    - name: Setup Graal VM
       uses: DeLaGuardo/setup-graalvm@master
       with:
         graalvm-version: '20.0.0.java8'
@@ -23,7 +20,14 @@ jobs:
     - name: Verify java version
       run: |
         java -version
-    - name: Test
+    - name: Cache Maven local repository
+      uses: actions/cache@v1
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - name: Maven build
       run: |
         mvn clean install
     - name: Check artifacts
