--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -44,6 +44,9 @@ jobs:
     - name: Verify native-image version
       run: |
         native-image --version
+    - name: Verify environment
+      run: |
+        set
     - name: Maven build
       shell: cmd
       run: |
