--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -26,6 +26,8 @@ jobs:
       shell: cmd
     # - name: List Windows 
     #   run: dir "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary"
+    - name: List Graal bin 
+      run: dir "C:\Program Files\GraalVM\graalvm-ce-java11-20.0.0\bin"
     # - name: print page size
     #   run: wmic pagefile list /format:list
     - name: Set PageFile
