--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -15,6 +15,12 @@ jobs:
         path: .m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
+    - name: Install native-image
+      shell: cmd
+      env:
+        JAVA_HOME: C:\Program Files\GraalVM\graalvm-ce-java11-20.0.0
+      run: |
+        call "%JAVA_HOME%\bin\gu" install native-image
     - name: List Graal bin 
       run: dir "C:\Program Files\GraalVM\graalvm-ce-java11-20.0.0\bin"
     - name: Create native-image.exe
@@ -26,7 +32,6 @@ jobs:
       env:
         JAVA_HOME: C:\Program Files\GraalVM\graalvm-ce-java11-20.0.0
       run: |
-        call "%JAVA_HOME%\bin\gu" install native-image
         call "%VCVARS_BAT%"
         call .\mvnw --settings .\.mvn\github-actions-windows-settings.xml clean install
 
