--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,50 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <platform>unknown</platform>
+    <mainClass>com.github.enr.modern.App</mainClass>
     <!-- dependencies version -->
     <junit5.framework.version>5.6.2</junit5.framework.version>
     <junit5.platform.version>1.6.2</junit5.platform.version>
     <junit5.vintage.version>5.6.2</junit5.vintage.version>
   </properties>
+
+    <profiles>
+    <profile>
+      <id>mac</id>
+      <activation>
+        <os>
+          <family>mac</family>
+        </os>
+      </activation>
+      <properties>
+        <platform>mac</platform>
+      </properties>
+    </profile>
+    <profile>
+      <id>unix</id>
+      <activation>
+        <os>
+          <family>unix</family>
+          <name>Linux</name>
+        </os>
+      </activation>
+      <properties>
+        <platform>linux</platform>
+      </properties>
+    </profile>
+    <profile>
+      <id>windows</id>
+      <activation>
+        <os>
+          <family>windows</family>
+        </os>
+      </activation>
+      <properties>
+        <platform>windows</platform>
+      </properties>
+    </profile>
+  </profiles>
 
   <dependencies>
     <dependency>
@@ -83,7 +122,7 @@
   <build>
 
     <plugins>
-      <plugin>
+      <!-- <plugin>
         <groupId>org.graalvm.nativeimage</groupId>
         <artifactId>native-image-maven-plugin</artifactId>
         <version>20.0.0</version>
@@ -93,9 +132,6 @@
               <goal>native-image</goal>
             </goals>
             <phase>package</phase>
-            <!-- buildArgs User property: buildArgs (no description available) imageName User property: imageName (no description available) 
-              mainClass User property: mainClass (no description available) outputDirectory (Default: ${project.build.directory}) Required: true User property: 
-              outputDir (no description available) skip (Default: false) User property: skip (no description available) -->
             <configuration>
               <skip>false</skip>
               <mainClass>com.github.enr.modern.App</mainClass>
@@ -103,6 +139,49 @@
             </configuration>
           </execution>
         </executions>
+      </plugin> -->
+
+      <plugin>
+        <groupId>com.github.ArloL</groupId>
+        <artifactId>native-image-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>native-image</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+        <configuration>
+          <skip>false</skip>
+          <!-- <mainClass>com.github.enr.modern.App</mainClass> -->
+          <imageName>${project.artifactId}-${platform}-${project.version}</imageName>
+        </configuration>
+      </plugin>
+      <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <configuration>
+              <mainClass>${mainClass}</mainClass>
+              <executable>${env.JAVA_HOME}/bin/java</executable>
+              <arguments>
+                  <argument>-agentlib:native-image-agent=config-merge-dir=./src/main/resources/META-INF/native-image</argument>
+                  <argument>-classpath</argument>
+                  <classpath/>
+                  <argument>${mainClass}</argument>
+              </arguments>
+          </configuration>
+      </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <configuration>
+              <archive>
+                  <manifest>
+                      <mainClass>${mainClass}</mainClass>
+                  </manifest>
+              </archive>
+          </configuration>
       </plugin>
     </plugins>
 
@@ -119,8 +198,30 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>3.0.0-M4</version>
         </plugin>
-
+      <plugin>
+        <!-- Plugin managing native-image.cmd on Windows -->
+        <groupId>com.github.ArloL</groupId>
+        <artifactId>native-image-maven-plugin</artifactId>
+        <version>482856dfa2</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+      </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.2.0</version>
+      </plugin>
       </plugins>
     </pluginManagement>
   </build>
+
+    <pluginRepositories>
+      <pluginRepository>
+        <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+      </pluginRepository>
+    </pluginRepositories>
 </project>
